@@ -1,3 +1,9 @@
+2019-03-27  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/85537
+	* gfortran.dg/dummy_procedure_11.f90: Fix test case.
+	* gfortran.dg/pointer_init_11.f90: New test case.
+
 2019-03-27  Mateusz B  <mateuszb@poczta.onet.pl>
 
 	PR target/85667
